# aily

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  CEO_SUMMARY.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  TODOS.md  docker-compose.preprod.yml  docker-compose.yml  findings.md  progress.md  pyproject.toml  pytest.ini  requirements-chaos.txt  requirements.txt  task_plan.md  test_browser_use_api.py
.omc/: project-memory.json
.omx/: metrics.json
aily/: AGENTS.md  config.py  main.py
docs/: AGENTS.md  AILY_CHAOS_ARCHITECTURE.md  AILY_COPILOT_DEVELOPMENT_PLAN.md  AILY_DEVELOPMENT_AND_TEST_MASTER_PLAN.md  AILY_FULL_DEVELOPMENT_GOAL_COMMAND.md  AILY_RC0_GOAL_CONTRACT.md  AILY_TEST_QUALITY_GATES.md  AILY_V1_UPGRADE_PLAN.md  AI_INNOVATION_METHODOLOGIES.md  ARCHITECTURE_AND_VISION.md  ARMY_OF_TOP_MINDS_PLAN.md  AUTOPILOT_TASK_TEMPLATE.md  BIGMODEL_API_CAPABILITIES.md  CURRENT_STATE.md  CURRENT_STATUS.md  CUSTOMER_SHIPPING_RUNBOOK.md  CUSTOMER_SHIP_READINESS_AUDIT.md  DIKIWI_ARCHITECTURE.md  DOCKER_FULL_FLOW_TEST_AND_IMPROVEMENT_PLAN.md  DOCKER_PREPROD.md  GATING_ARCHITECTURE.md  HOSTED_PRIVATE_WEBSITE_RUNBOOK.md  HUMAN_DROP_COMPREHENSIVE_FIX_PLAN.md  HUMAN_DROP_SOAK_REVIEW_AND_FIX_LIST.md  LLM_API_SELECTION_GUIDE.md  OBSIDIAN_COPILOT_REVIEW.md  PROVIDER_OUTPUT_EVALUATION_2026-04-26.md  PROVIDER_ROUTING_MATRIX.md  RC0_QUICKSTART.md  TESTING_CONTRACT.md  THINKING_THEATER_DEVELOPMENT_PLAN.md  THINKING_THEATER_FRONTEND_SPEC.md  THREE_MIND_ARCHITECTURE_CEO_REVIEW.md  THREE_MIND_ARCHITECTURE_ENG_REVIEW.md  THREE_MIND_ARCHITECTURE_PLAN.md  (+9 more)
(+544 files in other folders)
