[project]
name = "aily"
version = "0.7.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "lark-oapi>=1.0.0",
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "watchdog>=4.0.0",
    "apscheduler>=3.10.0,<4.0",
    "json-repair>=0.10.0,<1.0",
    "watchfiles>=0.20.0",
    "beautifulsoup4>=4.12.0",
    "pdfplumber>=0.10.0",
    "pdf2image>=1.17.0",
    "pillow>=10.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "mistune>=3.0.0",
    "instructor>=0.4.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.2.0",
]
